--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
             <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center p-3">
               <div id="clock" style="color: #ff69b4; font-size: 1.5rem; font-family: 'Dancing Script', cursive; margin-bottom: 0.5rem; text-align: center;"></div>
               <div class="side-image w-100" style="max-width:220px; margin-bottom: 1rem;">
-                <img src="/pictures/63b.jpg" alt="Image Here" />
+                <img src="pictures/63b.jpg" alt="Image Here" />
               </div>
             </div>
             <div class="col-12 col-md-7">
