--- a/mylove.html
+++ b/mylove.html
@@ -243,130 +243,130 @@
     <h1 align="center" class="header-title">My Love Album</h1>
   </header>
   <div class="bbtok">
-    <img class="image" src="/pictures/bbtok.jpg" alt="Profile 1">
+    <img class="image" src="pictures/bbtok.jpg" alt="Profile 1">
     <div class="heart">❤️</div>
-    <img class="image" src="/pictures/ryel id.jpg" alt="Profile 2">
+    <img class="image" src="pictures/ryel id.jpg" alt="Profile 2">
   </div>
   <br>
   <h2 class="head">BBTOK ALBUM</h2>
   <div class="container">
     <!-- Image Grid -->
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/bbtok.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/myamor.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/partner.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/ryel id.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/bbtok.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/myamor.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/partner.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/ryel id.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/1b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/2b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/3b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/4b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/1b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/2b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/3b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/4b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/5b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/6b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/7b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/8b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/5b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/6b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/7b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/8b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/9b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/10b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/11b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/12b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/9b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/10b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/11b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/12b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/12b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/14b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/15b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/16b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/12b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/14b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/15b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/16b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/17b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/18b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/19b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/20b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/17b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/18b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/19b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/20b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/21b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/22b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/23b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/24b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/21b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/22b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/23b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/24b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/25b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/26b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/27b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/28b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/25b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/26b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/27b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/28b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/29b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/30b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/31b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/32b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/29b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/30b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/31b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/32b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/33b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/34b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/35b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/36b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/33b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/34b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/35b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/36b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/37b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/38b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/39b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/40b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/37b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/38b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/39b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/40b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/41b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/42b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/43b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/44b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/41b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/42b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/43b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/44b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/45b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/46b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/47b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/48b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/45b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/46b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/47b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/48b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/49b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/50b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/51b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/52b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/49b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/50b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/51b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/52b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/53b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/54b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/55b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/56b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/53b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/54b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/55b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/56b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/57b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/58b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/59b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/60b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/57b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/58b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/59b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/60b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/61b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/62b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/63b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/64b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/61b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/62b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/63b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/64b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/65b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/66b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/67b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/68b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/65b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/66b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/67b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/68b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/69b.jpg" alt="Picture 1" /></div>
-      <div class="image-box"><img src="/pictures/70b.jpg" alt="Picture 2" /></div>
-      <div class="image-box"><img src="/pictures/71b.jpg" alt="Picture 3" /></div>
-      <div class="image-box"><img src="/pictures/72b.jpg" alt="Picture 4" /></div>
+      <div class="image-box"><img src="pictures/69b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/70b.jpg" alt="Picture 2" /></div>
+      <div class="image-box"><img src="pictures/71b.jpg" alt="Picture 3" /></div>
+      <div class="image-box"><img src="pictures/72b.jpg" alt="Picture 4" /></div>
     </div>
     <div class="image-grid">
-      <div class="image-box"><img src="/pictures/73b.jpg" alt="Picture 1" /></div>
+      <div class="image-box"><img src="pictures/73b.jpg" alt="Picture 1" /></div>
     </div>
   </div>
 </body>
