--- a/oursong.html
+++ b/oursong.html
@@ -188,7 +188,7 @@
         </div>
 
         <audio class="audio-player" controls>
-            <source src="/pictures/YOU AND I - KENNY ROGERS lyrics (HD) [uztkzXBRYso].mp3" type="audio/mp3">
+            <source src="pictures/YOU AND I - KENNY ROGERS lyrics (HD) [uztkzXBRYso].mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
 
