--- a/year.html
+++ b/year.html
@@ -220,9 +220,9 @@
     <div class="frosted-card">
       <h1>How long have we been together?</h1>
       <div class="bbtok">
-        <img src="/pictures/bbtok.jpg">
+        <img src="pictures/bbtok.jpg">
         <p>❤️</p>
-        <img src="/pictures/ryel id.jpg">
+        <img src="pictures/ryel id.jpg">
       </div>
       <div class="content">
         <p>We've been in love since October 10, 2022.</p>
